# Restaurant-voice-ai-agent

./: .env.example  .gitignore  .vercelignore  README.md  app.py  deployment.md  implementation.md  main.py  pyproject.toml  requirements.txt  vercel.json
.cursor/: mcp.json
data/: reservations.json
mcp/: restaurant_mcp_server.py
scripts/: vercel-build.sh
src/agent/: __init__.py  cli.py  gemini_tools.py  prompts.py  tools.py  voice_agent.py
src/booking/: __init__.py  codes.py  inventory.py  reservations.py
src/integrations/: __init__.py  booking_actions.py  calendar.py  google_auth.py  google_errors.py  sheets.py
src/server/: app.py  gemini_live.py  latency_tracker.py
src/server/static/: architecture.css  architecture.html  architecture.js  heritage.css  index.html  (+4 more)
stitch_shiv_sagar_voice_system/heritage_tech/: DESIGN.md
stitch_shiv_sagar_voice_system/shiv_sagar_booking_success/: code.html
stitch_shiv_sagar_voice_system/shiv_sagar_design_system_specification/: code.html
stitch_shiv_sagar_voice_system/shiv_sagar_desktop_homepage/: code.html
stitch_shiv_sagar_voice_system/shiv_sagar_voice_agent_connecting/: code.html
stitch_shiv_sagar_voice_system/shiv_sagar_voice_agent_connecting_animated/: code.html
stitch_shiv_sagar_voice_system/shiv_sagar_voice_agent_listening_active/: code.html
stitch_shiv_sagar_voice_system/shiv_sagar_voice_agent_speaking/: code.html
stitch_shiv_sagar_voice_system/shiv_sagar_voice_booking_confirmation/: code.html
stitch_shiv_sagar_voice_system/shiv_sagar_voice_reservation_panel/: code.html
tests/: test_booking.py
