[project]
name = "shiv-sagar-voice-agent"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "websockets>=12.0",
    "certifi>=2024.0.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
]

[tool.vercel]
entrypoint = "app:app"

[tool.vercel.scripts]
build = "bash scripts/vercel-build.sh"
